--- a/index.html
+++ b/index.html
@@ -185,7 +185,29 @@ Then I started to learn how to rig. Also, I enjoy solving problems instead of ig
                   <h2 class="mb-4">Experiences</h2>
 
                     <div class="timeline">
-                        
+
+                        <div class="timeline-wrapper">
+                             <div class="timeline-yr">
+                                  <span>2022</span>
+                             </div>
+                             <div class="timeline-info">
+                                  <h3><span>Senior Rigging</span>
+                                  <small>ICON</small></h3>
+                                  <p>...</p>
+                             </div>
+                        </div>
+
+                        <div class="timeline-wrapper">
+                             <div class="timeline-yr">
+                                  <span>2021-22</span>
+                             </div>
+                             <div class="timeline-info">
+                                  <h3><span>Character TD</span>
+                                  <small>ScanLineVFX</small></h3>
+                                  <p>The Batman</p>
+                             </div>
+                        </div>
+
                         <div class="timeline-wrapper">
                              <div class="timeline-yr">
                                   <span>2021</span>
