added one more image

--- a/index.html
+++ b/index.html
@@ -162,13 +162,19 @@ Then I started to learn how to rig. Also, I enjoy solving problems instead of ig
                             <img src="images/project/clifford.png" class="img-fluid" alt="project image">
                           </div>
                         </div> 
-
                           
                         <div class="item">
                           <div class="project-info">
                             <img src="images/project/paw_patrol.png" class="img-fluid" alt="project image">
                           </div>
                         </div>                                      
+
+                        <div class="item">
+                          <div class="project-info">
+                            <img src="images/project/paw_patrol.png" class="img-fluid" alt="project image">
+                          </div>
+                        </div>                                                              
+                        
                       </div>
 
                   </div>
