added one more image again

--- a/index.html
+++ b/index.html
@@ -171,9 +171,15 @@ Then I started to learn how to rig. Also, I enjoy solving problems instead of ig
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/paw_patrol.png" class="img-fluid" alt="project image">
+                            <img src="images/project/PAP2_Hero_Doggy.png" class="img-fluid" alt="project image">
                           </div>
-                        </div>                                                              
+                        </div> 
+
+                        <div class="item">
+                          <div class="project-info">
+                            <img src="images/project/wondla.png" class="img-fluid" alt="project image">
+                          </div>
+                        </div>                         
                         
                       </div>
 
