--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@ Then I started to learn how to rig. Also, I enjoy solving problems instead of ig
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/PAP2_Hero_Doggy.png" class="img-fluid" alt="project image">
+                            <img src="images/project/_nonePAP2_Hero_Doggy.png" class="img-fluid" alt="project image">
                           </div>
                         </div> 
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/wondla.png" class="img-fluid" alt="project image">
+                            <img src="images/project/wondla.jpg" class="img-fluid" alt="project image">
                           </div>
                         </div>                         
                         
