--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 Then I started to learn how to rig. Also, I enjoy solving problems instead of ignoring them.</p>
                         
                         <div class="custom-btn-group mt-4">
-                          <a href="#" class="btn mr-lg-2 custom-btn" download="cv.pdf"><i class='uil uil-file-alt'></i> Download Resume</a>
+                          <a href="#" class="btn mr-lg-2 custom-btn" download="cv1.pdf"><i class='uil uil-file-alt'></i> Download Resume</a>
                         </div>
                     </div>
                 </div>
