--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ Then I started to learn how to rig. Also, I enjoy solving problems instead of ig
                       </p>                    
 
                       <h3><span>Houdini</span></h3>
-                      <p>Velume</p>
+                      <p>Vellum</p>
                     
                       <h3><span>Debugging/Solving problems </span></h3>
                       <p></p>                    
